Name:                eventsource-wai
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable eventsource-wai
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4.3 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    blaze-builder >= 0.3,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    mtl >= 2 && < 3,
    http-types >= 0.6,
    enumerator >= 0.4,
    time >= 1.2,
    wai >= 0.4,
    warp >= 0.4

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields

