Name:                wai-eventsource
Version:             1.3.0.4
Synopsis:            WAI support for server-sent events
Description:         WAI support for server-sent events
License:             MIT
Author:              Chris Smith, Mathias Biilmann Christensen
Maintainer:          greg@gregweber.info
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8
homepage:            http://www.yesodweb.com/book/web-application-interface
license-file:        LICENSE

Library
  Build-depends:
      base                      >= 4.3 && < 5
    , bytestring                >= 0.9.1.4
    , blaze-builder             >= 0.3 && < 0.4
    , conduit                   >= 0.5      && < 1.1
    , http-types                >= 0.7
    , wai                       >= 1.3      && < 1.5
    , warp                      >= 1.3      && < 1.4
    , transformers

  ghc-options:     -Wall
  hs-source-dirs:  src
  exposed-modules:
    Network.Wai.EventSource
    Network.Wai.EventSource.EventStream

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
