Name:                wai-eventsource
Version:             3.0.0
Synopsis:            WAI support for server-sent events (deprecated)
Description:         Since WAI 3.0, this code has been merged into wai-extra.
License:             MIT
Author:              Chris Smith, Mathias Biilmann Christensen
Maintainer:          greg@gregweber.info
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8
homepage:            http://www.yesodweb.com/book/web-application-interface
license-file:        LICENSE

Library
    build-depends: wai >= 3.0
