Name:                wai-extra
Version:             3.0.0.1
Synopsis:            Provides some basic WAI handlers and middleware.
Description:         The goal here is to provide common features without many dependencies.
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Homepage:            http://github.com/yesodweb/wai
Category:            Web
Build-Type:          Simple
Cabal-Version:       >=1.8
Stability:           Stable
extra-source-files:
  tests.hs
  test/requests/dalvik-request
  test/json
  test/test.html
  test/sample.hs
  test/WaiExtraTest.hs

Library
  Build-Depends:     base                      >= 4 && < 5
                   , bytestring                >= 0.9.1.4
                   , wai                       >= 3.0      && < 3.1
                   , old-locale                >= 1.0.0.2  && < 1.1
                   , time                      >= 1.1.4
                   , network                   >= 2.2.1.5
                   , directory                 >= 1.0.1
                   , transformers              >= 0.2.2
                   , blaze-builder             >= 0.2.1.4  && < 0.4
                   , http-types                >= 0.7
                   , text                      >= 0.7
                   , case-insensitive          >= 0.2
                   , data-default-class
                   , fast-logger               >= 2.1      && < 2.2
                   , wai-logger                >= 2.0      && < 2.2
                   , ansi-terminal
                   , resourcet                 >= 0.4.6    && < 1.2
                   , void                      >= 0.5
                   , stringsearch              >= 0.3      && < 0.4
                   , containers
                   , base64-bytestring
                   , word8
                   , lifted-base               >= 0.1.2
                   , deepseq
                   , streaming-commons

  if os(windows)
      cpp-options:   -DWINDOWS
  else
      build-depends: unix

  Exposed-modules:   Network.Wai.Handler.CGI
                     Network.Wai.Handler.SCGI
                     Network.Wai.Middleware.AcceptOverride
                     Network.Wai.Middleware.Autohead
                     Network.Wai.Middleware.CleanPath
                     Network.Wai.Middleware.RequestLogger
                     Network.Wai.Middleware.Gzip
                     Network.Wai.Middleware.Jsonp
                     Network.Wai.Middleware.MethodOverride
                     Network.Wai.Middleware.MethodOverridePost
                     Network.Wai.Middleware.Rewrite
                     Network.Wai.Middleware.Vhost
                     Network.Wai.Middleware.HttpAuth
                     Network.Wai.Parse
                     Network.Wai.UrlMap
                     Network.Wai.Test
                     Network.Wai.EventSource
                     Network.Wai.EventSource.EventStream
  other-modules:     Network.Wai.Middleware.RequestLogger.Internal
  ghc-options:       -Wall


test-suite tests
    hs-source-dirs: test
    main-is: ../tests.hs
    type: exitcode-stdio-1.0

    build-depends:   base                      >= 4        && < 5
                   , wai-extra
                   , hspec                     >= 1.3
                   , HUnit

                   , wai
                   , http-types
                   , transformers
                   , zlib
                   , text
                   , bytestring
                   , directory
                   , blaze-builder             >= 0.2.1.4  && < 0.4
                   , data-default
                   , fast-logger               >= 2.1
                   , resourcet
    ghc-options:       -Wall

test-suite spec
    type:            exitcode-stdio-1.0
    hs-source-dirs:  test
    main-is:         Spec.hs
    other-modules:   Network.Wai.TestSpec
    build-depends:   base                      >= 4        && < 5
                   , wai-extra
                   , wai
                   , hspec >= 1.3
    ghc-options:     -Wall -Werror

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
