name:            wai-frontend-monadcgi
version:         3.0.0.3
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Run CGI apps on WAI.
description:     API docs and the README are available at <http://www.stackage.org/package/wai-frontend-monadcgi>.
category:        Web
stability:       stable
cabal-version:   >= 1.6
build-type:      Simple
extra-source-files: README.md ChangeLog.md

library
    build-depends: base              >= 4        && < 5
                 , bytestring
                 , containers        >= 0.2
                 , cgi
                 , http-types
                 , transformers
                 , case-insensitive
                 , wai               >= 3.0      && < 3.3
    exposed-modules: Network.Wai.Frontend.MonadCGI
    ghc-options:     -Wall

Source-repository head
    type:            git
    location:        git://github.com/yesodweb/wai.git
