Name:                wai-handler-devel
Version:             1.1.0
Synopsis:            WAI server that automatically reloads code after modification.
Description:         This handler automatically reloads your source code upon any changes. It works by using the hint package, essentially embedding GHC inside the handler. The handler (both the executable and library) takes three arguments: the port to listen on, the module name containing the application function, and the name of the function.
                     .
                     One major note: the type of the application is most likely not what you expect. A common case for WAI applications is having a withApplication function, and this library assumes this is the case. Therefore, the type signature of your application function must be:
                     .
                     > withYourApp :: (Application -> IO ()) -> IO ()
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Homepage:            http://github.com/yesodweb/wai
Category:            Web
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           Stable

Source-repository head
    type:            git
    location:        git://github.com/yesodweb/wai.git

Library
  Build-Depends:     base                  >= 4             && < 5
                   , wai                   >= 1.1           && < 1.2
                   , wai-extra             >= 1.1           && < 1.2
                   , http-types            >= 0.6           && < 0.7
                   , warp                  >= 1.1           && < 1.2
                   , directory                >= 1.0.1 && < 1.2
                   , network                  >= 2.2.1.5 && < 2.4
                   , bytestring                >= 0.9.1.4  && < 0.10
                   , hint                  >= 0.3.2.3       && < 0.4
                   , text                  >= 0.7           && < 0.12
                   , old-time
                   , transformers          >= 0.2.2         && < 0.3
                   , attoparsec            >= 0.10
  Exposed-modules:   Network.Wai.Handler.DevelServer
                     Network.Wai.Application.Devel
  ghc-options:       -Wall

Executable           wai-handler-devel
  Build-Depends:     cmdargs >= 0.4
  ghc-options:       -Wall -O2 -threaded
  main-is:           wai-handler-devel.hs

Executable           wai-handler-devel-unwatched
  Build-Depends:     cmdargs >= 0.4
  ghc-options:       -Wall -O2 -threaded
  main-is:           wai-handler-devel-unwatched.hs
