name:            wai-handler-fastcgi
version:         2.0.0
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Wai handler to fastcgi
category:        Web
stability:       stable
cabal-version:   >= 1.6
build-type:      Configure
extra-source-files: configure fastcgi.buildinfo.in
homepage:        http://www.yesodweb.com/book/web-application-interface
description:     Calls out to the libfcgi C library.

library
    build-depends:   base              >= 4           && < 5
                   , wai               >= 2.0         && < 2.1
                   , wai-extra         >= 2.0         && < 2.1
                   , bytestring        >= 0.9.1.4
    exposed-modules: Network.Wai.Handler.FastCGI
    ghc-options:     -Wall
    includes:        fcgiapp.h
    extra-libraries: fcgi

    if impl(ghc >= 7.4)
      cpp-options:     -DGHC_7_4

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
