name:            wai-handler-fastcgi
version:         3.0.0.1
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Wai handler to fastcgi
description:     API docs and the README are available at <http://www.stackage.org/package/wai-handler-fastcgi>.
category:        Web
stability:       stable
cabal-version:   >= 1.6
build-type:      Configure
extra-source-files: configure fastcgi.buildinfo.in README.md ChangeLog.md
homepage:        http://www.yesodweb.com/book/web-application-interface

library
    build-depends:   base              >= 4           && < 5
                   , wai               >= 3.0         && < 3.1
                   , wai-extra         >= 3.0         && < 3.1
                   , bytestring        >= 0.9.1.4
    exposed-modules: Network.Wai.Handler.FastCGI
    ghc-options:     -Wall
    includes:        fcgiapp.h
    extra-libraries: fcgi

    if impl(ghc >= 7.4)
      cpp-options:     -DGHC_7_4

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
