Name:                wai-handler-launch
Version:             3.0.0
Synopsis:            Launch a web app in the default browser.
Description:         This handles cross-platform launching and inserts Javascript code to ping the server. When the server no longer receives pings, it shuts down.
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6

Library
    Exposed-modules: Network.Wai.Handler.Launch
    build-depends:   base                    >= 4       && < 5
                   , wai                     >= 3.0     && < 3.1
                   , warp                    >= 3.0     && < 3.1
                   , http-types              >= 0.7
                   , transformers            >= 0.2.2
                   , bytestring              >= 0.9.1.4
                   , blaze-builder           >= 0.2.1.4 && < 0.4
                   , streaming-commons

    if os(windows)
        c-sources: windows.c
        cpp-options: -DWINDOWS
        extra-libraries: Shell32
    else
        build-depends: process >= 1.0 && < 1.3
        if os(darwin)
            cpp-options: -DMAC

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
