Name:                wai-handler-launch
Version:             3.0.2.4
Synopsis:            Launch a web app in the default browser.
description:         API docs and the README are available at <http://www.stackage.org/package/wai-handler-launch>.
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6
extra-source-files:  README.md ChangeLog.md

Library
    Exposed-modules: Network.Wai.Handler.Launch
    build-depends:   base                    >= 4       && < 5
                   , wai                     >= 3.0     && < 3.3
                   , warp                    >= 3.0     && < 3.3
                   , http-types              >= 0.7
                   , transformers            >= 0.2.2
                   , bytestring              >= 0.10.4
                   , streaming-commons       >= 0.2
                   , async

    if os(windows)
        c-sources: windows.c
        cpp-options: -DWINDOWS
        extra-libraries: Shell32 msvcrt
    else
        build-depends: process >= 1.0 && < 1.7
        if os(darwin)
            cpp-options: -DMAC

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
