name:            wai-handler-scgi
version:         1.3.0.1
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Wai handler to SCGI
category:        Web
stability:       stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/book/web-application-interface
description:     Wai handler to SCGI

library
    build-depends:   base                >= 4           && < 5
                   , wai                 >= 1.3         && < 1.4
                   , wai-extra           >= 1.3         && < 1.4
                   , bytestring          >= 0.9.1.4
    exposed-modules: Network.Wai.Handler.SCGI
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
