name:            wai-handler-scgi
version:         2.0.0.2
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Wai handler to SCGI (deprecated)
category:        Web
stability:       stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/book/web-application-interface
description:     Moved to wai-extra

library
    build-depends:   base                >= 4           && < 5
                   , wai                 >= 2.0         && < 2.2
                   , wai-extra           >= 2.0         && < 2.2
                   , bytestring          >= 0.9.1.4
    exposed-modules: Network.Wai.Handler.SCGI
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
