name:            wai-handler-webkit
version:         3.0.0.2
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Turn WAI applications into standalone GUIs using QtWebkit.
description:     API docs and the README are available at <http://www.stackage.org/package/wai-handler-webkit>.
category:        Web
stability:       unstable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        https://github.com/yesodweb/wai/tree/master/wai-handler-webkit
extra-source-files:  README.md ChangeLog.md

library
    build-depends:     base      >= 4       && < 5
                     , wai       >= 3.0     && < 3.2
                     , warp      >= 3.0     && < 3.2
    ghc-options:       -Wall
    exposed-modules:   Network.Wai.Handler.Webkit
    c-sources:         webkit.cpp
    if os(windows)
        extra-libraries: QtCore4, QtGui4, QtNetwork4, QtWebKit4
    else
        pkgconfig-depends: QtWebKit

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
